\ifdefined rearranged to match \fi

--- a/chemspecdata.tex
+++ b/chemspecdata.tex
@@ -80,6 +80,12 @@
 	}%
 }%
 \resetCSD
+
+\def\hnmr{%
+	\begingroup
+	\endgroup
+}%
+
 %_________________________________________________
 %
 %                  B -  N M R
@@ -179,8 +185,7 @@
 \newcommand{\cnmr}[1][CDCl3]{\ce{^{13}C} NMR (\ce{#1}) $\delta$}
 
 % 15N NMR
-\newcommand{\nnmr}[1][CDCl3]{\ce{^{15}
-		N} NMR (\ce{#1}) $\delta$}
+\newcommand{\nnmr}[1][CDCl3]{\ce{^{15}N} NMR (\ce{#1}) $\delta$}
 
 % 19F NMR
 \newcommand{\fnmr}[1][CDCl3]{\ce{^{19}F} NMR (\ce{#1}) $\delta$}
