Comment old code, remove unnecessary key/val entries.

--- a/chemspecdata.tex
+++ b/chemspecdata.tex
@@ -75,8 +75,7 @@
 \def\resetCSD{%
 	\setKVdefault[hnmr]{%
 		solvent			= CDCl3,
-		freq			= 400,
-		key				= {}
+		freq			= 400
 	}%
 }%
 \resetCSD
@@ -96,8 +95,7 @@
 \def\resetCSD{%
 	\setKVdefault[bnmr]{%
 		solvent			= CDCl3,
-		freq			= 128,
-		key				= {}
+		freq			= 128
 	}%
 }%
 \resetCSD
@@ -112,8 +110,7 @@
 \def\resetCSD{%
 	\setKVdefault[cnmr]{%
 		solvent			= CDCl3,
-		freq			= 100,
-		key				= {}
+		freq			= 100
 	}%
 }%
 \resetCSD
@@ -128,8 +125,7 @@
 \def\resetCSD{%
 	\setKVdefault[nnmr]{%
 		solvent			= CDCl3,
-		freq			= 40,
-		key				= {}
+		freq			= 40
 	}%
 }%
 \resetCSD
@@ -144,8 +140,7 @@
 \def\resetCSD{%
 	\setKVdefault[fnmr]{%
 		solvent			= CDCl3,
-		freq			= 377,
-		key				= {}
+		freq			= 377
 	}%
 }%
 \resetCSD
@@ -160,8 +155,7 @@
 \def\resetCSD{%
 	\setKVdefault[pnmr]{%
 		solvent			= CDCl3,
-		freq			= 128,
-		key				= {}
+		freq			= 128
 	}%
 }%
 \resetCSD
@@ -176,22 +170,22 @@
 
 %% ISOTOPE OPTIONS %%
 % 1H NMR
-\newcommand{\hnmr}[1][CDCl3]{\ce{^{1}H} NMR (\ce{#1}) $\delta$}
+%\newcommand{\hnmr}[1][CDCl3]{\ce{^{1}H} NMR (\ce{#1}) $\delta$}
 
 % 11B NMR
-\newcommand{\bnmr}[1][CDCl3]{\ce{^{11}B} NMR (\ce{#1}) $\delta$}
+%\newcommand{\bnmr}[1][CDCl3]{\ce{^{11}B} NMR (\ce{#1}) $\delta$}
 
 % 13C NMR
-\newcommand{\cnmr}[1][CDCl3]{\ce{^{13}C} NMR (\ce{#1}) $\delta$}
+%\newcommand{\cnmr}[1][CDCl3]{\ce{^{13}C} NMR (\ce{#1}) $\delta$}
 
 % 15N NMR
-\newcommand{\nnmr}[1][CDCl3]{\ce{^{15}N} NMR (\ce{#1}) $\delta$}
+%\newcommand{\nnmr}[1][CDCl3]{\ce{^{15}N} NMR (\ce{#1}) $\delta$}
 
 % 19F NMR
-\newcommand{\fnmr}[1][CDCl3]{\ce{^{19}F} NMR (\ce{#1}) $\delta$}
+%\newcommand{\fnmr}[1][CDCl3]{\ce{^{19}F} NMR (\ce{#1}) $\delta$}
 
 % 31P NMR
-\newcommand{\pnmr}[1][CDCl3]{\ce{^{31}P} NMR (\ce{#1}) $\delta$}
+%\newcommand{\pnmr}[1][CDCl3]{\ce{^{31}P} NMR (\ce{#1}) $\delta$}
 
 %% SOLVENT OPTIONS %%
 % Fallback option - render in \ce{}
